--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
+  "dependencies": {
+    "@clack/prompts": "^0.10.0",
+    "chalk": "^5.4.1",
+    "effect": "^3.14.2",
+    "execa": "^9.5.2"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
-    "@eslint-react/eslint-plugin": "^1.38.2",
     "@types/bun": "latest",
     "eslint": "^9.23.0"
   }
