--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@antfu/ni": "^24.3.0",
     "@clack/prompts": "^0.10.0",
     "chalk": "^5.4.1",
     "effect": "^3.14.2",
-    "execa": "^9.5.2"
+    "execa": "^9.5.2",
+    "prettier": "^3.5.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
+    "@next/eslint-plugin-next": "^15.2.4",
     "@types/bun": "latest",
-    "eslint": "^9.23.0"
+    "eslint": "^9.23.0",
+    "eslint-plugin-readable-tailwind": "^2.0.0"
   }
 }
