--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "@antfu/ni": "^24.3.0",
     "@clack/prompts": "^0.10.0",
+    "cac": "^6.7.14",
     "chalk": "^5.4.1",
     "effect": "^3.14.2",
-    "execa": "^9.5.2",
-    "prettier": "^3.5.3"
+    "execa": "^9.5.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.11.0",
