--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "scripts": {
     "build": "tsup bin/index.ts --format cjs,esm --dts",
-    "lint": "eslint . && tsc --noEmit"
+    "lint": "eslint . && tsc --noEmit",
+    "release": "bun run build && changeset publish"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
