--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "junbi",
+  "name": "@jamii/junbi",
   "type": "module",
   "version": "1.0.3",
   "description": "jamie's eslint config initializer",
@@ -13,7 +13,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "bin": {
-    "junbi": "./dist/index.js"
+    "junbi": "dist/index.js"
   },
   "files": [
     "dist"
