--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "eslint": "^9.23.0",
     "tsup": "^8.2.0",
     "typescript": "^5.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
