--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@antfu/eslint-config": "^4.11.0",
     "@changesets/cli": "^2.28.1",
     "@types/bun": "latest",
+    "@types/node": "^22.14.0",
     "eslint": "^9.23.0",
     "tsup": "^8.2.0",
     "typescript": "^5.0.0"
